Add README, screenshot and gif preview

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="description" content="Adriel Café's personal site" />
     <meta property="og:title" content="adriel.cafe">
     <meta property="og:url" content="http://adriel.cafe">
-    <meta property="og:image" content="https://raw.githubusercontent.com/adrielcafe/adriel.cafe/master/screenshot.png">
+    <meta property="og:image" content="https://raw.githubusercontent.com/adrielcafe/adrielcafe.github.io/master/screenshot.png">
     <meta property="og:description" content="Adriel Café's personal site">
 
     <link rel="icon" href="favicon.ico">
