--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Adriel Café">
     <meta name="description" content="Adriel Café's personal site" />
+    <meta name="keywords" content="adriel café, adriel, café, coffee, android developer, web developer, front-end developer" />
     <meta property="og:title" content="adriel.cafe">
     <meta property="og:url" content="http://adriel.cafe">
     <meta property="og:image" content="https://raw.githubusercontent.com/adrielcafe/adrielcafe.github.io/master/screenshot.png">
