--- a/privacy_policy/nomanswallpaper.html
+++ b/privacy_policy/nomanswallpaper.html
@@ -7,7 +7,7 @@
       <style>body{font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; padding:1em;}</style>
    </head>
    <body>
-      <h2><b>Chroma App</b> | Privacy Policy</h2>
+      <h2><b>No Man's Wallpaper</b> | Privacy Policy</h2>
       <p> Adriel Café built the No Man's Wallpaper as a Free app. This SERVICE is provided by Adriel Café at no cost and is intended for use as is.
       </p>
       <p>This page is used to inform website visitors regarding my policies with the collection, use, and
