--- a/privacy_policy/verne.html
+++ b/privacy_policy/verne.html
@@ -12,13 +12,13 @@
 
 <body>
     <h2>Privacy Policy</h2>
-    <p> Adriel Café built the No Man's Wallpaper app as an Open Source app. This SERVICE is provided by Adriel Café at no cost and is intended for use as is.
+    <p> Adriel Café built the Verne app as an Open Source app. This SERVICE is provided by Adriel Café at no cost and is intended for use as is.
     </p>
     <p>This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.
     </p>
     <p>If you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy.
     </p>
-    <p>The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at No Man's Wallpaper unless otherwise defined in this Privacy Policy.
+    <p>The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at Verne unless otherwise defined in this Privacy Policy.
     </p>
     <p><strong>Information Collection and Use</strong></p>
     <p>For a better experience, while using our Service, I may require you to provide us with certain personally identifiable information. The information that I request will be retained on your device and is not collected by me in any way.
