Update gwent wallpapers privacy policy header

--- a/privacy_policy/gwent_wallpapers.html
+++ b/privacy_policy/gwent_wallpapers.html
@@ -7,7 +7,7 @@
       <style> body { font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; padding:1em; } </style>
    </head>
    <body>
-      <strong>Privacy Policy</strong> 
+      <h2>Privacy Policy</h2> 
       <p>
          Adriel Café built the Gwent Wallpapers app as
          an Open Source app. This SERVICE is provided by
