--- a/privacy_policy/gwent_wallpapers.html
+++ b/privacy_policy/gwent_wallpapers.html
@@ -49,6 +49,7 @@
          </p>
          <ul>
             <li><a href="https://www.google.com/policies/privacy/" target="_blank" rel="noopener noreferrer">Google Play Services</a></li>
+            <li><a href="https://firebase.google.com/policies/analytics" target="_blank" rel="noopener noreferrer">Google Analytics for Firebase</a></li>
             <li><a href="https://firebase.google.com/support/privacy/" target="_blank" rel="noopener noreferrer">Firebase Crashlytics</a></li>
          </ul>
       </div>
